--- a/src/app/PRICING/product-finalised/product-finalised.component.html
+++ b/src/app/PRICING/product-finalised/product-finalised.component.html
@@ -115,24 +115,24 @@
 
         <mat-form-field class="container-half-width">
 
-            <input matInput placeholder="Quote Expiration Date" formControlName="QuoteExpirationDate">
+            <input matInput placeholder="Quote Expiration Date - mm/dd/yyyy"  formControlName="QuoteExpirationDate">
         </mat-form-field>
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Price Validity Date" formControlName="PriceValidityDate">
+            <input matInput placeholder="Price Validity Date - mm/dd/yyyy"  formControlName="PriceValidityDate">
         </mat-form-field>
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Sent To CM Date" formControlName="SentToCMDate">
-        </mat-form-field>
-
-
-
-        <mat-form-field class="container-half-width">
-            <input matInput placeholder="Price Prepared By" formControlName="PricePreparedBy">
+            <input matInput placeholder="Sent To CM Date - mm/dd/yyyy"  formControlName="SentToCMDate">
         </mat-form-field>
 
 
+
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Approval Date" formControlName="ApprovalDate">
+            <input matInput placeholder="Price Prepared By"  formControlName="PricePreparedBy">
+        </mat-form-field>
+
+
+        <mat-form-field class="container-half-width">
+            <input matInput placeholder="Approval - mm/dd/yyyy" formControlName="ApprovalDate">
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
@@ -146,7 +146,7 @@
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Completion Date" formControlName="CompletionDate">
+            <input matInput placeholder="Completion Date - mm/dd/yyyy" formControlName="CompletionDate">
         </mat-form-field>
 
 
