--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
+<div class="container">
+    <div class="sub-container">
+
+        <h3>Pricing Portal</h3>
+
+        <div class="home-button">
+            <button (click)="pricingHome_Click()">
+                <mat-icon aria-hidden="false"  class="material-icons.md-light">home
+                </mat-icon>
+            </button>
+        </div>
+
+    </div>
+</div>
+
+
+
 <router-outlet></router-outlet>
