--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -9,7 +9,7 @@
 
             <mat-label>Company Name</mat-label>
             <mat-select name="lstCompanyName" formControlName="CompanyName" required [(value)]="selectedCompany"
-                (selectionChange)="companyname_change()">
+                (selectionChange)="companyname_change($event)">
                 <mat-option>--</mat-option>
                 <mat-option *ngFor="let company of companyNames" [value]="company">
                     {{company}}
@@ -31,7 +31,7 @@
         <mat-form-field class="container-half-width">
             <mat-label>Customer ID</mat-label>
             <mat-select name="lstCustomerID" formControlName="CustomerID" required [(value)]="selectedCustomer"
-                (selectionChange)="customer_change()">
+                (selectionChange)="customer_change($event)">
                 <mat-option>--</mat-option>
                 <mat-option *ngFor="let customer of customerIDs" [value]="customer.id">
                     {{customer.name}}
@@ -42,7 +42,7 @@
         <mat-form-field class="container-half-width">
             <mat-label>Customer Name</mat-label>
             <mat-select name="lstCustomerName" formControlName="CustomerName" required [(value)]="selectedCustomer"
-                (selectionChange)="customer_change()">
+                (selectionChange)="customer_change($event)">
                 <mat-option>--</mat-option>
                 <mat-option *ngFor="let customer of customerNames" [value]="customer.id">
                     {{customer.name}}
@@ -96,7 +96,7 @@
 
             <mat-form-field class="container-half-width">
                 <mat-label>Payment Terms</mat-label>
-                <mat-select name="lstPaymentTerms" formControlName="PaymentTerm" [(value)]="selectedPaymentTerms">
+                <mat-select name="lstPaymentTerms" formControlName="PaymentTerm" >
                     <mat-option>--</mat-option>
                     <mat-option *ngFor="let term of paymentTerms" [value]="term.id">
                         {{term.id }} - {{term.name}}
@@ -108,10 +108,6 @@
                 <input matInput placeholder="CC Email" formControlName="CCEmail">
             </mat-form-field>
 
-        </div>
-
-        <div *ngIf="validationError">
-            <p class="text-danger">** {{validationMessage}}</p>
         </div>
 
 
