--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="sub-container">
+    <div class="sub-container" id="siteHeader">
 
         <h3>Pricing Portal</h3>
 
