--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -126,9 +126,11 @@
         <div *ngIf="DisabledMode=='yes'">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
                 <mat-button-toggle color="warn" (click)="finalise()">Finalise</mat-button-toggle>
+                <mat-button-toggle color="warn" (click)="viewQuote()">ViewQuote</mat-button-toggle>
             </mat-button-toggle-group>
         </div>
-    </mat-card>
+    </mat-card>    
+    
 
     <!--
     <app-product-finalised QuoteID="{{quoteID}}" QuoteLineID="{{quoteLineID}}" CompanyName="{{selectedCompany}}">
