--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -125,8 +125,8 @@
 
         <div *ngIf="DisabledMode=='yes'">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                <mat-button-toggle color="warn" (click)="finalise()">Finalise</mat-button-toggle>
-                <mat-button-toggle color="warn" (click)="viewQuote()">ViewQuote</mat-button-toggle>
+                <mat-button-toggle *ngIf="!quoteFinalised" color="warn" (click)="finalise()">Finalise</mat-button-toggle>
+                <mat-button-toggle *ngIf="quoteFinalised" color="warn" (click)="viewQuote()">ViewQuote</mat-button-toggle>
             </mat-button-toggle-group>
         </div>
     </mat-card>    
