--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,16 @@
 
         <h3>Pricing Portal</h3>
 
+
         <div class="home-button">
+
+            <button (click)="search_Click()" >
+                <mat-icon aria-hidden="false" class="material-icons.md-light">search
+                </mat-icon>
+            </button>
+
             <button (click)="pricingHome_Click()">
-                <mat-icon aria-hidden="false"  class="material-icons.md-light">home
+                <mat-icon aria-hidden="false" class="material-icons.md-light">home
                 </mat-icon>
             </button>
         </div>
