--- a/src/app/PRICING/initiate-main/initiate-main.component.css
+++ b/src/app/PRICING/initiate-main/initiate-main.component.css
@@ -20,3 +20,9 @@
       width: 200px;
       margin-left: 220px;
   }
+
+  .container-padding{
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  
