--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -1,4 +1,4 @@
-<form class="container" [formGroup]="pricingGroup">
+<form class="container" [formGroup]="pricingGroup" (ngSubmit)="save()">
 
 
 
@@ -77,8 +77,18 @@
         </mat-form-field>
 
         <mat-form-field class="container-half-width">
-            <input matInput placeholder="Requested By" formControlName="RequestedBy" required>
-        </mat-form-field>
+
+                <mat-label>Requested By</mat-label>
+                <mat-select name="lstOpportunityOwner" formControlName="RequestedBy" required
+                    [(value)]="selectedRequestedBy">
+                    <mat-option>--</mat-option>
+                    <mat-option *ngFor="let owner of opportunityOwners" [value]="owner.name">
+                        {{owner.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+     
+
 
         <mat-form-field class="container-half-width">
             <input matInput [matDatepicker]="picker" placeholder="Submitted Date" formControlName="SubmittedDate"
@@ -114,7 +124,9 @@
         <div *ngIf="DisabledMode=='no'">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
                 <mat-button-toggle  color="warn" (click)="delete()">Delete</mat-button-toggle>
-                <mat-button-toggle [disabled]="quoteSubmitted" (click)="save()">Save</mat-button-toggle>
+                
+                <button [disabled]="quoteSubmitted" (click)="save()" type="submit">Save</button>
+                <!--<mat-button-toggle [disabled]="quoteSubmitted" (click)="save()">Save</mat-button-toggle>-->
                 <mat-button-toggle (click)="submit()">Submit</mat-button-toggle>
                 <mat-button-toggle (click)="newQuote()">New Quote</mat-button-toggle>
                 
