--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -39,7 +39,7 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field class="container-half-width">
+        <mat-form-field class="container-half-width" *ngIf="selectedCustomer!='-PRPOTENTI'">
             <mat-label>Customer Name</mat-label>
             <mat-select name="lstCustomerName" formControlName="CustomerName" required [(value)]="selectedCustomer"
                 (selectionChange)="customer_change($event)">
@@ -49,6 +49,12 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
+
+        <mat-form-field class="container-half-width" *ngIf="selectedCustomer=='-PRPOTENTI'">
+            
+                <input matInput placeholder="Please enter a Customer Name" formControlName="CustomerName" required>
+            </mat-form-field>
+        
 
         <mat-form-field class="container-half-width">
 
@@ -78,16 +84,16 @@
 
         <mat-form-field class="container-half-width">
 
-                <mat-label>Requested By</mat-label>
-                <mat-select name="lstOpportunityOwner" formControlName="RequestedBy" required
-                    [(value)]="selectedRequestedBy">
-                    <mat-option>--</mat-option>
-                    <mat-option *ngFor="let owner of opportunityOwners" [value]="owner.name">
-                        {{owner.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-     
+            <mat-label>Requested By</mat-label>
+            <mat-select name="lstOpportunityOwner" formControlName="RequestedBy" required
+                [(value)]="selectedRequestedBy">
+                <mat-option>--</mat-option>
+                <mat-option *ngFor="let owner of opportunityOwners" [value]="owner.name">
+                    {{owner.name}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
 
 
         <mat-form-field class="container-half-width">
@@ -123,13 +129,13 @@
 
         <div *ngIf="DisabledMode=='no'">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                <mat-button-toggle  color="warn" (click)="delete()">Delete</mat-button-toggle>
-                
+                <mat-button-toggle color="warn" (click)="delete()">Delete</mat-button-toggle>
+
                 <button [disabled]="quoteSubmitted" (click)="save()" type="submit">Save</button>
                 <!--<mat-button-toggle [disabled]="quoteSubmitted" (click)="save()">Save</mat-button-toggle>-->
                 <mat-button-toggle (click)="submit()">Submit</mat-button-toggle>
                 <mat-button-toggle (click)="newQuote()">New Quote</mat-button-toggle>
-                
+
                 <button class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
                     [disabled]="quoteSubmitted">Add Product</button>
             </mat-button-toggle-group>
@@ -138,11 +144,12 @@
         <div *ngIf="DisabledMode=='yes'">
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
                 <button *ngIf="!quoteFinalised" (click)="finalise()" type="submit">Finalise</button>
-                <mat-button-toggle *ngIf="quoteFinalised" color="warn" (click)="viewQuote()">ViewQuote</mat-button-toggle>
+                <mat-button-toggle *ngIf="quoteFinalised" color="warn" (click)="viewQuote()">ViewQuote
+                </mat-button-toggle>
             </mat-button-toggle-group>
         </div>
-    </mat-card>    
-    
+    </mat-card>
+
 
     <!--
     <app-product-finalised QuoteID="{{quoteID}}" QuoteLineID="{{quoteLineID}}" CompanyName="{{selectedCompany}}">
