--- a/src/app/PRICING/initiate-main/initiate-main.component.html
+++ b/src/app/PRICING/initiate-main/initiate-main.component.html
@@ -136,7 +136,7 @@
                 <mat-button-toggle (click)="submit()">Submit</mat-button-toggle>
                 <mat-button-toggle (click)="newQuote()">New Quote</mat-button-toggle>
 
-                <button class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
+                <button type="button" class="btn-add-product float-right" mat-raised-button (click)="addProduct()"
                     [disabled]="quoteSubmitted">Add Product</button>
             </mat-button-toggle-group>
         </div>
