--- a/src/app/SIRF/sirfinitiate/sirfinitiate.component.html
+++ b/src/app/SIRF/sirfinitiate/sirfinitiate.component.html
@@ -1,4 +1,4 @@
-<form class="container" [formGroup]="sirfGroup">
+<form class="container" [formGroup]="sirfGroup" (ngSubmit)="Submit($event)">
 
     <mat-card class="container-padding">
 
@@ -201,10 +201,11 @@
 
 
 
-        <br><br>
-        <div>
+        
+        <div *ngIf="SIRFCompleteMode!='true'">
+                <br><br>
             <mat-button-toggle-group name="fontStyle" aria-label="Font Style" class="btn-toggle-group">
-                <mat-button-toggle color="warn" (click)="Submit()">Submit</mat-button-toggle>
+                <button type="submit" color="warn" (click)="Submit($event)">Submit</button>
             </mat-button-toggle-group>
         </div>
 
