--- a/src/app/SIRF/root-cause-category-list/root-cause-category-list.component.css
+++ b/src/app/SIRF/root-cause-category-list/root-cause-category-list.component.css
@@ -17,8 +17,8 @@
       padding-left: 20px;
   }
 
-  .container-full-width textarea{
+  .container-full-width {textarea{
     min-height: 100px;
-    min-width: 600px;
+    min-width: 600px;}
     
   }
