--- a/src/app/SIRF/sirfcomplete/sirfcomplete.component.html
+++ b/src/app/SIRF/sirfcomplete/sirfcomplete.component.html
@@ -1,3 +1,2 @@
 <app-sirfinitiate #initiate SIRFNumber={{SIRFID}} SIRFCompleteMode="true" ></app-sirfinitiate>
-<app-sirfdetails SIRFNumber={{SIRFID}} SIRFCompleteMode="true" ></app-sirfdetails>
-<app-root-cause-category-list SIRFNumber={{SIRFID}}></app-root-cause-category-list>
+<app-sirfdetails  #details SIRFNumber={{SIRFID}} SIRFCompleteMode="true" ></app-sirfdetails>
