--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="sub-container" id="siteHeader">
 
-        <h3>Pricing Portal</h3>
+        <h3>{{title}}</h3>
 
 
         <div class="home-button">
